# 3D.Things

./: .gitignore  CMakeLists.txt  readme.md
2017/: 2017.stl  happy.stl  readme.md
2017/F3D/: 2017.f3d  happy.f3d
2017/STEP/: 2017.stp  happy.stp
2017/stl/: 2017.stl  happy.stl
Agujeros/: agujeros.scad
Cable.tie.base/: readme.md
Cable.tie.base/F3D/: Cable.tie.f3d
Cable.tie.base/STEP/: Cable.tie.stp
Cable.tie.base/STL/: Cable.tie.stl
Carcasa.iphone/: darkomen.stl
Carcasa.iphone/Finales/: hurtado.scad  hurtado.stl  ilusion.scad  modelum.scad  modelum.stl  ohlala.stl
Carcasa.iphone/Nombres/: ilusion.stl
Endstop_holder/Endstop_holder/: bar-clamp.scad  main.cpp
Endstop_holder/Endstop_holder-build-Desktop_Qt_5_0_1_clang_64bit-Debug/: Endstop_holder  Makefile  endstop_holder_y.scad
Endstop_holder/STL/: endstop_holder.gcode  endstop_holder.stl  endstop_holder_y.stl
Gramil/: .gitignore  CMakeLists.txt  Stino.settings  gramil.scad  gramil.stl  main.cpp  soporte.gcode  soporte.scad  soporte.stl  x.gcode
Lin.kuei/: lin_kuei.ai  linkuei_1.scad
Plantilla.ooml/: .gitignore  CMakeLists.txt  Stino.settings  main.cpp
ProtoBot/: CMakeCache.txt  CMakeLists.txt  COPYING  INSTALL  Makefile  Protobot.stl  cmake_install.cmake  protobot  protobot.cpp  protobot.scad  sensor.cpp  spacers.scad  spacers.stl  wheel.scad  wheel.stl
ProtoBot/Pictures/: video.mov
REPY-2.0-dev/: README.md
REPY-2.0-dev/HARDWARE/: CMakeCache.txt  CMakeLists.txt  Makefile  basicservo.cpp  basicservo.h  basicsquaredpcb.cpp  basicsquaredpcb.h  cmake_install.cmake  fakefutaba3003sservo.cpp  fakefutaba3003sservo.h  futaba3003sservo.cpp  futaba3003sservo.h  main.cpp  repy_module.cpp  repy_module.h  servo_dimensions.h  skymegaboard.cpp  skymegaboard.h  towerprosg90servo.cpp  towerprosg90servo.h
Soporte.Ipad/: Soporte.Ipad.scad
Soporte.Ipad/iPad_Backseat_Cinema/: AutoSave_ipadcarcinema_partD.skp  ipadcarcinema_partABC.gcode  ipadcarcinema_partABC.gcode_temp_.stl  ipadcarcinema_partABC.skp  ipadcarcinema_partABC_part0.stl  ipadcarcinema_partABC_part1.stl  (+6 more)
Tapa.Bacoom/: tapa.Bacoom.stl
bacoom.cap/: readme.md  tapa.Bacoom.gcode  tapa.Bacoom.scad
bemoo.moneybox/: readme.md
caja/: CMakeLists.txt  main.cpp
calibration/: 04hollow.stl  202010.stl
christmas.tree/: readme.md
christmass.tree/: readme.md
extrusor/: budaschnozzle_mount.gcode  budaschnozzle_mount.stl  idler.stl  mount.gcode  mount.scad  mount.stl  printrbot_mount.gcode  printrbot_mount_.gcode  printrbot_mount_.stl
gopro.longboard/: readme.md
hodor/: readme.md
keychain/: readme.md
knob/: readme.md
lin.kuei/: lin.kuei.scad  lin.kuei.stl  readme.md
longboard.support/: readme.md
moneybox/: readme.md
organizer/: principal.ipt  principal.stl  rotor.ipt  rotor.stl
pencil.box/: readme.md
phone.holder/: Assembly1.iam  Part1.ipt  Part1.stl  guia.ipt  guia.stl  movil.ipt  movil.stl  movil0.2.ipt  movil0.2.stl  pinza.ipt  pinza.stl  pinza0.2.ipt  pinza0.2.stl  pinza0.3.ipt  pinza0.4.ipt  pinza0.4.stl  readme.md
plant.plate/: readme.md
ruler/: readme.md
sav.holder/: readme.md  sav.holder.scad  sav.holder.stl
sd.prusai3/: readme.md
thegeekhouse/: readme.md
tool.box/: readme.md
tool.tray/: readme.md
tray/: readme.md
videoconsole/: BOX.stl  readme.md
white.box/: readme.md
zendstop/: readme.md
(+145 files in other folders)
